gclb/nginx-ingress-example/helloweb-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloweb-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/rewrite-target: "/"
    #    kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - http:
      paths:
      - path: /helloweb
        backend:
          serviceName: helloweb-backend
          servicePort: 8080
