gclb/nginx-ingress-example/my-echo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-echo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
  - http:
      paths:
      - path: /my-echo
        backend:
          serviceName: my-echo
          servicePort: 12345
