gclb/nginx-ingress-example/my-nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/rewrite-target: "/"
    #    kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/secure-backends: "true"
spec:
  tls:
    - secretName: gcp-tls
  rules:
  - http:
      paths:
      - path: /my-nginx
        backend:
          serviceName: my-nginx
          servicePort: my-https-port
